--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:start": "npx sequelize db:create",
     "db:migration": "npx sequelize db:migrate",
-    "start": "npm run db:start && npm run db:migration && node ./src/server.js",
-    "dev": "nodemon ./src/server.js"
+    "db:drop": "npx sequelize db:drop",
+    "start": "npm run db:drop && npm run db:start && npm run db:migration && node ./src/server.js",
+    "dev": "npm run db:drop && npm run db:start && npm run db:migration && nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
