refactor: drop folder src

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "db:migration": "npx sequelize db:migrate",
     "db:drop": "npx sequelize db:drop",
     "db:seed": "npx sequelize db:seed:all",
-    "start": "node ./src/server.js",
-    "dev": "npm run db:drop && npm run db:start && npm run db:migration && npm run db:seed && nodemon ./src/server.js"
+    "start": "node ./server.js",
+    "dev": "npm run db:drop && npm run db:start && npm run db:migration && npm run db:seed && nodemon ./server.js"
   },
   "keywords": [],
   "author": "",
